# FarSeer

./: .gitignore  Dockerfile  Readme.md  docker-compose.yaml  pyproject.toml
src/: hash_store.py  main.py
