[tool.poetry]
name = "farseer"
version = "0.1.0"
description = "FastAPI server for checking Warcraft III map hashes against known cheat maps"
authors = ["ThomasThelen <tommythelen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

